--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "build": "tsc",
+  "start": "node dist/server.js",  
+  "dev": "ts-node-dev src/server.ts" 
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
